# pasty

./: .npmrc  eslint.config.mjs  iconfont.json  index.html  package.json  pnpm-lock.yaml  postcss.config.js  stylelint.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
scripts/: moveJsToJsx.js
src/: main.css  main.scss  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/entities/: Cargo.toml
src-tauri/entities/src/: assets.rs  configs.rs  lib.rs  paste_type.rs  pasty.rs
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: configs.rs
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20250122_161132_init_pasty.rs  m20250122_162019_init_config.rs  m20250122_162025_init_assets.rs
src-tauri/pasty/: Cargo.toml  tauri.conf.json
src-tauri/pasty/capabilities/: default.json
src-tauri/pasty/src/: lib.rs  main.rs
src-tauri/pasty/src/biz/: config.rs  mod.rs  pasty.rs  types.rs
src-tauri/pasty/src/commands/: config.rs  greeting.rs  mod.rs  pasty.rs
src-tauri/pasty/src/core/: clipboard.rs  clipboard_handlers.rs  constants.rs  database.rs  handler.rs  mod.rs
src-tauri/storage/: Cargo.toml
src-tauri/storage/src/: asset.rs  config.rs  lib.rs  pasty.rs
src-tauri/utils/: Cargo.toml
src/apis/: DatabaseApi.ts
src/components/: Tab.less  Tab.tsx  TitleBarTabs.less  TitleBarTabs.tsx
src/constants/: ApiNames.ts  ServiceNames.ts  StoreNames.ts  index.ts
src/container/: index.ts
src/hooks/: index.ts  providers.ts  useApi.ts  useService.ts  useStore.ts
src/i18n/: index.ts
src/libs/utils/: dom.ts  (+1 more)
src/pages/: mainPage.tsx
src/router/: index.tsx  routes.tsx
src/services/: AppService.ts  BaseService.ts  Database.ts
src/stores/: BaseStore.ts  PasteListStore.ts
src/types/: apis.ts  common.ts  entities.ts  index.ts  model.ts  props.ts  services.ts  settings.ts  stores.ts
(+112 files in other folders)
