[package]
name = "pasty"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pasty_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
entities = { path = "../entities" }
utils = { path = "../utils" }
migration = { path = "../migration" }
storage = { path = "../storage" }
chrono = "0.4.39"
once_cell = "1.20.2"
sea-orm = { version = "1.1.4", features = ["sqlx-sqlite"] }
tokio = { version = "1.43.0", features = ["full"] }
tauri = { version = "2", features = [] }
tauri-plugin-clipboard = "2"
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
parking_lot = "0.12.3"
log = "0.4.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3.4.1"
clipboard-rs = { version = "0.2.2" }
base64 = "0.22.1"
image = "0.25.5"
